removed qdrant and flowise - added crawl4ai

--- a/www/index.html
+++ b/www/index.html
@@ -215,19 +215,8 @@
                     <div class="status">Port 8080</div>
                 </div>
 
-                <div class="service-card" data-url="https://flowise.lan">
-                    <div class="service-info">
-                        <h3>
-                            <span class="status-dot status-unknown"></span>
-                            Flowise
-                        </h3>
-                    </div>
-                    <p>Visual flow builder for creating AI applications with a drag-and-drop interface.</p>
-                    <a href="https://flowise.lan" target="_blank">Access Flowise</a>
-                    <div class="status">Port 3001</div>
-                </div>
 
-                <div class="service-card" data-url="https://supabase.lan">
+                <div class="service-card" data-url="https://studio.lan">
                     <div class="service-info">
                         <h3>
                             <span class="status-dot status-unknown"></span>
@@ -235,8 +224,8 @@
                         </h3>
                     </div>
                     <p>Modern database management interface for PostgreSQL with built-in auth and realtime subscriptions.</p>
-                    <a href="https://supabase.lan" target="_blank">Access Supabase Studio</a>
-                    <div class="status">Port 3000</div>
+                    <a href="https://studio.lan" target="_blank">Access Supabase Studio</a>
+                    <div class="status">Port 4180</div>
                 </div>
 
                 <div class="service-card" data-url="https://kokoro.lan">
@@ -249,6 +238,17 @@
                     <p>Web interface for managing and monitoring the Kokoro text-to-speech service.</p>
                     <a href="https://kokoro.lan/web/" target="_blank">Access Kokoro UI</a>
                     <div class="status">Port 8880</div>
+                </div>
+                <div class="service-card" data-url="https://comfyui.lan">
+                    <div class="service-info">
+                        <h3>
+                            <span class="status-dot status-unknown"></span>
+                            ComfyUI
+                        </h3>
+                    </div>
+                    <p>Node-based interface for Stable Diffusion models, enabling complex image generation workflows.</p>
+                    <a href="https://comfyui.lan" target="_blank">Access ComfyUI</a>
+                    <div class="status">Port 8188</div>
                 </div>
             </div>
         </div>
@@ -265,14 +265,6 @@
                     <div class="status">Port 8880</div>
                 </div>
 
-                <div class="service-card">
-                    <h3>
-                        <span class="status-dot status-unknown"></span>
-                        Qdrant
-                    </h3>
-                    <p>Vector similarity search engine for efficient retrieval of embeddings and semantic search.</p>
-                    <div class="status">Port 6333</div>
-                </div>
 
                 <div class="service-card">
                     <h3>
@@ -300,6 +292,17 @@
                     <p>Listen to your PostgreSQL database changes in realtime via websockets.</p>
                     <div class="status">Websocket</div>
                 </div>
+                <div class="service-card" data-url="https://crawl4ai.lan">
+                    <div class="service-info">
+                        <h3>
+                            <span class="status-dot status-unknown"></span>
+                            Crawl4AI
+                        </h3>
+                    </div>
+                    <p>AI-powered web crawler and scraper for extracting structured data from websites.</p>
+                    <a href="https://crawl4ai.lan" target="_blank">Access Crawl4AI</a>
+                    <div class="status">Port 8000</div>
+                </div>
             </div>
         </div>
 
@@ -318,10 +321,10 @@
                 <div class="service-card">
                     <h3>
                         <span class="status-dot status-unknown"></span>
-                        Supabase Kong
+                        Supabase API Gateway (Kong)
                     </h3>
-                    <p>API Gateway managing routes and authentication for Supabase services.</p>
-                    <div class="status">Ports 8000, 8443</div>
+                    <p>API Gateway managing routes and authentication for Supabase Studio services. Accessible via https://studio.lan</p>
+                    <div class="status">Port 8000</div>
                 </div>
 
                 <div class="service-card">
