setup supabase api

--- a/www/index.html
+++ b/www/index.html
@@ -266,6 +266,19 @@
                 </div>
 
 
+                <div class="service-card" data-url="https://supabase.lan">
+                    <div class="service-info">
+                        <h3>
+                            <span class="status-dot status-unknown"></span>
+                            Supabase API Gateway (Kong)
+                        </h3>
+                    </div>
+                    <p>Main API gateway managing routes, authentication, and access to Supabase backend services (Auth, REST, Realtime, etc.).</p>
+                    <a href="https://supabase.lan" target="_blank">Check Status</a>
+                    <div class="status">Port 8000</div>
+                </div>
+
+
                 <div class="service-card">
                     <h3>
                         <span class="status-dot status-unknown"></span>
