--- a/www/index.html
+++ b/www/index.html
@@ -237,6 +237,7 @@
                     </div>
                     <p>Web interface for managing and monitoring the Kokoro text-to-speech service.</p>
                     <a href="https://kokoro.lan/web/" target="_blank">Access Kokoro UI</a>
+                    <a href="https://kokoro.lan/docs" target="_blank" style="margin-left: 0.5rem;">Documentation</a>
                     <div class="status">Port 8880</div>
                 </div>
                 <div class="service-card" data-url="https://comfyui.lan">
