--- a/www/index.html
+++ b/www/index.html
@@ -287,6 +287,18 @@
                     <a href="https://infinitetalk.lan" target="_blank">Access InfiniteTalk</a>
                     <div class="status">Port 8418</div>
                 </div>
+
+                <div class="service-card" data-url="https://va.lan">
+                    <div class="service-info">
+                        <h3>
+                            <span class="status-dot status-unknown"></span>
+                            Virtual Assistant
+                        </h3>
+                    </div>
+                    <p>NVIDIA-powered visual assistant with real-time speech recognition, vision-language understanding, and animated avatar with lip-sync.</p>
+                    <a href="https://va.lan" target="_blank">Access Virtual Assistant</a>
+                    <div class="status">Port 8080</div>
+                </div>
             </div>
         </div>
 
@@ -302,6 +314,17 @@
                     <div class="status">Port 8880</div>
                 </div>
 
+                <div class="service-card" data-url="https://lmstudio.lan">
+                    <div class="service-info">
+                        <h3>
+                            <span class="status-dot status-unknown"></span>
+                            LM Studio
+                        </h3>
+                    </div>
+                    <p>Local LLM server with OpenAI-compatible API. Run large language models locally with high performance.</p>
+                    <a href="https://lmstudio.lan/v1/models" target="_blank">View Models</a>
+                    <div class="status">Port 1234</div>
+                </div>
 
                 <div class="service-card" data-url="https://supabase.lan">
                     <div class="service-info">
